Resolves: tdf#90138 don't try to save a marks OtherPos if it doesn't have one

Change-Id: I522a236015c91c0744b3018d3d4e4d6c65ea19ab
(cherry picked from commit 4fe5b44b15647542b1550deaeee43ec3d1e57591)
Reviewed-on: https://gerrit.libreoffice.org/15141
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>